--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/TareqNewazShahriar/Tempate-Project-Electron-Context-Isolation.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "waiting for some authors",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TareqNewazShahriar/Tempate-Project-Electron-Context-Isolation/issues"
